# deepagent_0.6_research_v1

./: .gitignore  README.md  build_backend.py  deep-agents-06-architecture.pptx  pyproject.toml
docs/superpowers/plans/: 2026-05-16-deepagents-06-cli.md
docs/superpowers/specs/: 2026-05-16-deepagents-06-cli-design.md
examples/: task.txt
examples/source_notes/: company.md  product.md
src/deep_research_agent/: __init__.py  agent.py  cli.py  prompts.py  serpapi_client.py  tools.py
src/deep_research_agent/skills/citation-dedup/: SKILL.md
src/deep_research_agent/skills/report-synthesis/: SKILL.md
src/deep_research_agent/skills/research-planning/: SKILL.md
src/deep_research_agent/skills/source-quality/: SKILL.md
src/deepagents_06_lab/: __init__.py  agent.py  cli.py  prompts.py  streaming.py  tools.py
tests/: test_agent.py  test_cli.py  test_deep_research_agent.py  test_prompts.py  test_streaming.py  test_tools.py
