[project]
name = "deepagents-06-lab"
version = "0.1.0"
description = "Python CLI sample for Deep Agents 0.6 with Moonshot Kimi, interpreter PTC, streaming, and memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents[quickjs]>=0.6",
    "langchain-core>=1.0",
    "langchain-ollama>=1.0",
    "langchain-openai>=1.0",
    "langgraph>=1.0",
]

[project.scripts]
deepagents-06-lab = "deepagents_06_lab.cli:main"
deep-research-agent = "deep_research_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "build_backend"
backend-path = ["."]

[tool.uv]
reinstall-package = ["deepagents-06-lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
